--- a/prac_08/convert_miles_km.kv
+++ b/prac_08/convert_miles_km.kv
@@ -9,24 +9,24 @@ BoxLayout:
             text: '1'
             font_size: 48
             multiline: False
+            on_text: app.convert_miles_to_km(self.text)
 
         BoxLayout:
             orientation: 'vertical'
 
             Button:
                 text: 'Up'
-
                 on_press:app.handle_increment(1)
             Button:
                 text: 'Down'
                 on_press:app.handle_increment(-1)
 
-    Button:
-        text: 'Convert miles to km'
-        on_press: app.convert_miles_to_km(input_number.text)
+#    Button:
+#        text: 'Convert miles to km'
+#        on_press: app.convert_miles_to_km(input_number.text)
 
     Label:
-        id: output_label
+#        id: output_label
         text: app.output_km
         font_size: 48
         color: (1, 1, 0, 1)
